--- a/requisition/templates/New_Application/Application.html
+++ b/requisition/templates/New_Application/Application.html
@@ -4,106 +4,13 @@
 	<meta charset="UTF-8">
 	<title>New Application</title>
   <style>
-    /* Global Styles */
+  /* Global Styles */
 
-    body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-  }
-  
   /* Header Styles */
-  header {
-    background-color: #ffffff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-  }
-  
-  nav {
-    display: flex;
-    align-items: center;
-  }
-  
-  nav a {
-    color: #444444;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 0.5rem;
-    margin: 0 1rem;
-    transition: color 0.2s ease-in-out;
-  }
-  
-  nav a:hover {
-    color: #00a86b;
-  }
-  
-  nav ul {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav li {
-    margin: 0;
-    padding: 0;
-  }
-  
-  h4 {
-    color: #444444;
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 0;
-  }
-  
-  @media screen and (max-width: 768px) {
-    nav {
-      display: none;
-    }
-  }
-  
-  
-  /* Main Styles */
-  
-  main {
-    padding: 2em;
-    text-align: center;
-  }
-  
-  main h2 {
-    margin-top: 0;
-  }
-  
-  /* Buttons  */
-  .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #6ABE30;
-    background-image: linear-gradient(to bottom right, #6ABE30, #4F9F27);
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .button:hover {
-    transform: scale(1.1);
-  }
 
+  /* Main Styles */
+    
+  /* Buttons  */
 
   /* Form Styling */
   form {
@@ -135,40 +42,11 @@ label {
   margin-bottom: 10px;
   font-weight: bold;
 }
-
-button[type=submit] {
-  background-color: #6ABE30;
-  background-image: linear-gradient(to bottom right, #6ABE30, #4F9F27);
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-}
-
-button[type=submit]:hover {
-  transform: scale(1.1);
-}
-
-  
-  
+ 
   /* Footer Styles */
   
-  footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1em;
-    margin-top: 2em;
-  }
-  
-  footer p {
-    margin: 0;
-  }
 </style>
+
 </head>
 <body>
 
@@ -185,7 +63,7 @@ button[type=submit]:hover {
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Submit</button>
+      <button type="submit" class="submit-btn">Submit</button>
     </form>  
       
   {% endblock %}
