--- a/requisition/templates/New_Document/upload_document.html
+++ b/requisition/templates/New_Document/upload_document.html
@@ -3,8 +3,7 @@
   <head>
     <title>New Document</title>
 
-</head>
-  <body>
+
     {% include 'header.html' %}
 
     {% block content %}
@@ -14,14 +13,10 @@
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Upload</button>
+    <button type="submit" class="submit-btn">Upload</button>
   </form>
 
 {% endblock %}
 
-
-    <footer>
-      <p>Copyright &copy; 2023</p>
-    </footer>
   </body>
 </html>
