--- a/requisition/templates/Single_Document_View/Single_Document.html
+++ b/requisition/templates/Single_Document_View/Single_Document.html
@@ -176,9 +176,19 @@ table {
           <!-- <td>{{ document.document_file.name }}</td> -->
           <td><a href="{{ documents.document_file.url }}">{{ document.document_file.name }}</a></td>
         </tr>
+        <tr>
+          <th>Send Approval Request</th>
+          <td><a href="{% url 'requisition:send_approval_request' %}" class="button">Send Approval Request</a>
+          </td>
+        </tr>
+        <tr>
+          <th>Cancel Approval Request</th>
+          <td><a href="{% url 'requisition:cancel_approval_request' %}" class="button-danger">Cancel Approval Request</a></td>
+        </tr>
       </table>
-      <a href="{% url 'requisition:view_document' %}" class="button">Back</a>
+      <a href="{% url 'requisition:view_document' %}" class="button-back">Back</a>
     {% endblock %}      
     </div>
   </body>
 </html>
+
