Changed the login and no accounts

--- a/requisition/templates/footer.html
+++ b/requisition/templates/footer.html
@@ -1,7 +1,6 @@
 {% block content%}
 <footer>
-    <p>© 2023 Requisition Website</p> |
-    <a href="{% url 'requisition:logout' %}"><span class="login-btn">logout</span></a>
+    <p>© 2023 Requisition Website</p>
   </footer>
 </body>
 </html>
