--- a/requisition/templates/base.html
+++ b/requisition/templates/base.html
@@ -5,5 +5,6 @@
 
 {% include 'header.html' %}
 
+  <iframe src="https://student.must.ac.ke/" width="100%" height="600px"></iframe>
 
 {% include 'footer.html' %}
