--- a/requisition/templates/SignUp/signup.html
+++ b/requisition/templates/SignUp/signup.html
@@ -159,7 +159,7 @@ button[type="submit"]:hover {
             </div>
         {% endif %}
 
-        <button class="submit-btn">Submit</button>
+        <button class="submit-btn">Sign Up Now</button>
         <a href="../Login"><span class="login-btn">Login</span></a>
     </form>    
 </div>
