--- a/requisition/templates/View_Document/ViewDocument.html
+++ b/requisition/templates/View_Document/ViewDocument.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -154,7 +156,7 @@ th {
             <td>{{ document.uploaded_by }}</td>
             <td>{{ document.uploaded_date }}</td>
             <!-- <td>{{ documents.document_file }}</td> -->
-            <td><a href="{{ documents.document_file.url }}" target="_blank">{{ document.document_file.name }}</a></td>
+            <td><a href="{% static documents.document_file.url %}" target="_blank">{{ document.document_file.name }}</a></td>
             <!-- <td><button>View</button></td> -->
             <td><a href="{% url 'requisition:document_detail' document_id=document.id %}">View</a></td>
           </tr>
