--- a/requisition/templates/Single_Document_View/Single_Document.html
+++ b/requisition/templates/Single_Document_View/Single_Document.html
@@ -178,7 +178,7 @@ table {
         </tr>
         <tr>
           <th>Send Approval Request</th>
-          <td><a href="{% url 'requisition:send_approval_request' %}" class="button">Send Approval Request</a>
+          <td><a href="{% url 'requisition:send_approval_request' %}" class="button">Approve Request</a>
           </td>
         </tr>
         <tr>
@@ -191,4 +191,3 @@ table {
     </div>
   </body>
 </html>
-
