--- a/requisition/templates/nav-bar.html
+++ b/requisition/templates/nav-bar.html
@@ -4,7 +4,7 @@
 <header>
     <nav>
       <a href="{% url 'requisition:home' %}">
-        <img src="{% static 'media/must_logo.png' %}" alt="Meru University Logo">
+        <img src="{% static 'logo/must_logo.png' %}" width="80px">
       </a>
       
       <ul>
