--- a/requisition/templates/Login/login.html
+++ b/requisition/templates/Login/login.html
@@ -49,7 +49,7 @@ input[type="text"],
 input[type="email"],
 input[type="password"] {
   display: block;
-  width: 100%;
+  width: 80%;
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
@@ -132,9 +132,9 @@ button[type="submit"]:hover {
     <form method="post" action=".">
         {% csrf_token %}
 
-        <div class="mb-3">
+        <div class="mb-3" style="padding-bottom:10px ;">
           <a href="{% url 'requisition:home' %}">
-            <img src="{% static 'must_logo.png' %}" alt="Meru University Logo">
+            <img src="{% static 'logo/must_logo.png' %}" alt="Meru University Logo" width="100px">
           </a>
         </div>
 
