--- a/requisition/templates/header.html
+++ b/requisition/templates/header.html
@@ -216,8 +216,10 @@ footer {
   margin-top: 2em;
 }
 
-footer p {
+footer{
   margin: 0;
+  background-color: #6ABE30;
+  background-image: linear-gradient(to bottom right, #6ABE30, #4F9F27);
 }
 </style>
 </head>
