Added the approval functions

--- a/requisition/templates/New_Application/Application.html
+++ b/requisition/templates/New_Application/Application.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+  <link rel="shortcut icon" href="{% static 'logo/must_logo.png' %}"" type="image/x-icon" /> 
 	<title>New Application</title>
   <style>
   /* Global Styles */
