--- a/requisition/templates/SignUp/signup.html
+++ b/requisition/templates/SignUp/signup.html
@@ -1,8 +1,10 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+  <link rel="shortcut icon" href="{% static 'logo/must_logo.png' %}"" type="image/x-icon" /> 
     <title>Staff Signup</title>
     <style>
         body {
