--- a/requisition/templates/header.html
+++ b/requisition/templates/header.html
@@ -234,7 +234,7 @@ footer{
       <a href="{% url 'requisition:view_applications' %}" class="button">View Applications</a>
       <a href="{% url 'requisition:upload_document' %}" class="button">Add Document</a>
       <a href="{% url 'requisition:view_document' %}" class="button">View Document</a>
-      <a href="{% url 'requisition:document_approval_status' %}" class="button">Document Approval Status</a>
+      <a href="{% url 'requisition:approved_documents' %}" class="button">Approved Documents</a>
     </div>
   </main>
 {% endblock %}
