--- a/requisition/templates/Logout/logout.html
+++ b/requisition/templates/Logout/logout.html
@@ -1,6 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+  <link rel="shortcut icon" href="{% static 'logo/must_logo.png' %}"" type="image/x-icon" /> 
+	
 	<title>Logout</title>
 </head>
 <body>
