--- a/requisition/templates/Send_Approval_Request/SendApproval.html
+++ b/requisition/templates/Send_Approval_Request/SendApproval.html
@@ -1,6 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+  <link rel="shortcut icon" href="{% static 'logo/must_logo.png' %}"" type="image/x-icon" /> 
+	
     <title>Send Approval Request</title>
     <style>
       /* Global Styles */
