--- a/requisition/templates/base.html
+++ b/requisition/templates/base.html
@@ -1,6 +1,9 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="{% static 'logo/must_logo.png' %}"" type="image/x-icon" /> 
     <title>Must Requisition</title>
 
 {% include 'header.html' %}
