--- a/requisition/templates/header.html
+++ b/requisition/templates/header.html
@@ -233,7 +233,7 @@ footer{
       <a href="{% url 'requisition:new_application' %}" class="button">New Application</a>
       <a href="{% url 'requisition:view_applications' %}" class="button">View Applications</a>
       <a href="{% url 'requisition:upload_document' %}" class="button">Add Document</a>
-      <a href="{% url 'requisition:view_document' %}" class="button">View Document</a>
+      <a href="{% url 'requisition:view_document' %}" class="button">View Documents</a>
       <a href="{% url 'requisition:approved_documents' %}" class="button">Approved Documents</a>
     </div>
   </main>
