--- a/requisition/templates/View_Applications/View_Application.html
+++ b/requisition/templates/View_Applications/View_Application.html
@@ -143,7 +143,7 @@ th {
             <th>#</th>
             <th>Applicant Name</th>
             <th>Item</th>
-            <th>Quantity Date</th>
+            <th>Quantity</th>
             <th>Reason</th>
             <th>Date Created</th>
             <th>Approval Status</th>
@@ -164,7 +164,9 @@ th {
           </tr>
         {% endfor %}
         </tbody>
-      </table>
+      </table><br>
+      <a href="" class="button">Approved Applications</a>
+      
       
     </div>
   </body>
