Linked the Approve Applications page to the application page

--- a/requisition/templates/View_Applications/View_Application.html
+++ b/requisition/templates/View_Applications/View_Application.html
@@ -165,7 +165,7 @@ th {
         {% endfor %}
         </tbody>
       </table><br>
-      <a href="" class="button">Approved Applications</a>
+      <a href="{% url 'requisition:approved_applications'%}" class="button">Approved Applications</a>
       
       
     </div>
