--- a/requisition/templates/Approved_Applications/approved_applications.html
+++ b/requisition/templates/Approved_Applications/approved_applications.html
@@ -144,28 +144,36 @@ th {
 <div class="container">
     <h1>Approved Applications</h1>
     <table>
-        <thead>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Applicant Name</th>
+          <th>Item</th>
+          <th>Quantity</th>
+          <th>Reason</th>
+          <th>Date Created</th>
+          <th>Approval Status</th>
+          <th>View Option</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for application in approved_applicants %}
+        <tr>
+          <td>{{ forloop.counter }}</td>
+          <td>{{ application.applicant_name }}</td>
+          <td>{{ application.item }}</td>
+          <td>{{ application.quantity }}</td>
+          <td>{{ application.reason|truncatewords:10 }}</td>
+          <td>{{ application.date_created }}</td>
+          <td>{{ application.approval }}</td>
+          <td><a href="{% url 'requisition:application_detail' pk=application.pk %}">View</a></td>
+        </tr>
+        {% empty %}
             <tr>
-                <th>Document Name</th>
-                <th>Uploaded By</th>
-                <th>Uploaded Date</th>
-                <th>Document File</th>
+                <td colspan="4">No approved applications found.</td>
             </tr>
-        </thead>
-        <tbody>
-            {% for doc in approved_docs %}
-                <tr>
-                    <td>{{ doc.document_name }}</td>
-                    <td>{{ doc.uploaded_by }}</td>
-                    <td>{{ doc.uploaded_date }}</td>
-                    <td><a href="{{ doc.document_file.url }}" target="_blank">{{ doc.document_file.name }}</a></td>
-                </tr>
-            {% empty %}
-                <tr>
-                    <td colspan="4">No approved documents found.</td>
-                </tr>
-            {% endfor %}
-        </tbody>
+        {% endfor %}
+    </tbody>
     </table>
 </div>
 {% endblock %}
