--- a/requisition/templates/header.html
+++ b/requisition/templates/header.html
@@ -232,6 +232,7 @@ footer{
     <div class="button-container">
       <a href="{% url 'requisition:new_application' %}" class="button">New Application</a>
       <a href="{% url 'requisition:view_applications' %}" class="button">View Applications</a>
+      <a href="{% url 'requisition:approved_applications' %}" class="button">Approved Applications</a>
       <a href="{% url 'requisition:upload_document' %}" class="button">Add Document</a>
       <a href="{% url 'requisition:view_document' %}" class="button">View Documents</a>
       <a href="{% url 'requisition:approved_documents' %}" class="button">Approved Documents</a>
